--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -8,9 +8,11 @@
 
 @layer base {
   html {
-    /*font-family: "Press Start 2P", "cursive";*/
     background-color: black;
   }
+}
+
+@layer utilities {
 }
 
 @media (max-resolution: 0.5dppx) {
